--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
       "axios": "^1.6.0",
       "bcryptjs": "^3.0.2",
       "cors": "^2.8.5",
+      "docxtemplater": "^3.61.1",
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "express-fileupload": "^1.4.0",
       "jsonwebtoken": "^9.0.2",
       "mongoose": "^7.3.4",
       "multer": "^1.4.5-lts.2",
+      "pizzip": "^3.1.8",
       "xlsx": "^0.18.5"
    },
    "devDependencies": {
